feat : basically redesigned everything from addding all icons to changeing some small but major things and redesigned contact and uploaded my photo

--- a/index.css
+++ b/index.css
@@ -34,6 +34,10 @@ body {
   transform: translateY(-5px);
 }
 
+.card img {
+  width: 50px;
+  margin-bottom: 15px;
+}
 .card a {
   text-decoration: none;
   color: #007bff;
