--- a/index.css
+++ b/index.css
@@ -2,12 +2,17 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
+  -webkit-tap-highlight-color: transparent;
+  -webkit-focus-ring-color: transparent;
+  outline: none;
 }
 
 body {
-  font-family: "Arial", sans-serif;
-  background-color: #f4f4f9;
-  color: #333;
+  font-family: roboto, "Arial", sans-serif;
+  /* background-color: #f4f4f9; */
+  background: linear-gradient(135deg, #fbf8f8, #20b7ee);
+  color: #000000;
   line-height: 1.6;
 }
 
@@ -21,16 +26,19 @@ body {
 }
 
 .card {
-  background-color: #ffffff;
+  background-color: #e0f2fc;
   border: 1px solid #ddd;
   border-radius: 8px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
+  transition: transform 0.3s ease, background-color 0.3s ease;
   text-align: center;
   padding: 20px;
+  border: 2px solid rgb(11, 11, 211);
+  cursor: pointer;
 }
 
 .card:hover {
+  background-color: #c4d8eb;
   transform: translateY(-5px);
 }
 
