--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@
   font-family: roboto, arial, system-ui, -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
     sans-serif;
+
+  -webkit-tap-highlight-color: transparent;
+  -webkit-focus-ring-color: transparent;
+  outline: none;
 }
 
 body {
@@ -42,10 +46,10 @@ nav {
 
 .menu-toggle span {
   display: block;
-  height: 3px;
-  background-color: black;
+  height: 4px;
+  background-color: #030538;
   border-radius: 2px;
-  transition: transform 0.75s ease, opacity 0.3s ease;
+  transition: transform 0.5s ease, opacity 0.3s ease;
 }
 
 .menu-toggle.active span:nth-child(1) {
@@ -107,14 +111,15 @@ nav a:hover {
   padding: 40px;
   border-radius: 20px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-  background-color: #ffffff;
+  background-color: #f0f9ff;
   margin-top: 3rem;
+  border: 1px solid #d0e3f0;
 }
 
 h1 {
   font-size: 2.5rem;
   margin-bottom: 20px;
-  color: #333;
+  color: #0062ff;
 }
 
 input[type="text"],
@@ -157,7 +162,7 @@ input[type="text"]::placeholder,
 input[type="number"]::placeholder,
 input[type="tel"]::placeholder,
 textarea::placeholder {
-  color: #171515;
+  color: #000000;
 }
 
 label {
